KCAWD-20 - Refactored the service to use system parameter as per code review comments. Added unit tests using JMock.